@@ -5,13 +5,12 @@
  * For commercial licenses see https://www.tiny.cloud/
  */
 
-import PluginManager from 'tinymce/core/api/PluginManager';
 import Editor from 'tinymce/core/api/Editor';
 import { window } from '@ephox/dom-globals';
 
 const hasProPlugin = function (editor: Editor) {
   // draw back if power version is requested and registered
-  if (/(^|[ ,])powerpaste([, ]|$)/.test(editor.getParam('plugins')) && PluginManager.get('powerpaste')) {
+  if (editor.hasPlugin('powerpaste', true)) {
     if (typeof window.console !== 'undefined' && window.console.log) {
       window.console.log(`PowerPaste is incompatible with Paste plugin! Remove 'paste' from the 'plugins' option.`);
     }
