@@ -5,12 +5,12 @@
  * For commercial licenses see https://www.tiny.cloud/
  */
 
-import PluginManager from 'tinymce/core/api/PluginManager';
 import { window } from '@ephox/dom-globals';
+import Editor from 'tinymce/core/api/Editor';
 
-const hasProPlugin = function (editor) {
+const hasProPlugin = function (editor: Editor) {
   // draw back if power version is requested and registered
-  if (/(^|[ ,])tinymcespellchecker([, ]|$)/.test(editor.getParam('plugins')) && PluginManager.get('tinymcespellchecker')) {
+  if (editor.hasPlugin('tinymcespellchecker', true)) {
 
     if (typeof window.console !== 'undefined' && window.console.log) {
       window.console.log(
